morningBugFix機能
